[Task][28096]manager xem chi tiet slot

--- a/app/views/contracts/index.html.erb
+++ b/app/views/contracts/index.html.erb
@@ -1,4 +1,4 @@
-<section class="content-header">
+<section class="content-header" id="employee">
   <div class="container-fluid">
     <div class="row mb-2">
       <div class="col-sm-6">
@@ -15,8 +15,8 @@
     </div>
   </div>
 </section>
-<section class="content">
-  <div class="container-fluid">
+<section class="content" id="emloyee-content">
+  <div class="container-fluid" id="emloyee-container-fluid">
     <div class="row">
       <div class="col-12">
         <div class="card">
