--- a/app/views/slots/_slot.html.erb
+++ b/app/views/slots/_slot.html.erb
@@ -7,7 +7,7 @@
   <td><%= t ".#{slot_status}" %></td>
   <td><%= slot.price %>&#x00024;</td>
   <td class="text-center">
-    <%= link_to "#", class: "btn btn-primary btn-sm" do %>
+    <%= link_to slot, class: "btn btn-primary btn-sm" do %>
       <i class="fa fa-eye"></i>
     <% end %>
   </td>
