--- a/app/views/contracts/show.html.erb
+++ b/app/views/contracts/show.html.erb
@@ -1,4 +1,4 @@
-<section class="content-header">
+<section class="content-header" id="employee">
   <div class="container-fluid">
     <div class="row mb-2">
       <div class="col-sm-6" id="contract-detail">
@@ -16,8 +16,8 @@
     </div>
   </div>
 </section>
-<section class="content">
-  <div class="container-fluid">
+<section class="content" id="emloyee-content">
+  <div class="container-fluid" id="emloyee-container-fluid">
     <div class="card">
       <div class="card-header">
         <h3>
