[Bug][28011]Sua loi validate so

--- a/app/assets/stylesheets/libs/adminlte.scss
+++ b/app/assets/stylesheets/libs/adminlte.scss
@@ -20351,6 +20351,7 @@ html.maximized-card {
   border-top: 0;
   color: #666;
   padding: 20px;
+  width: 150%;
 }
 
 .login-card-body .input-group .form-control,
