[TASK][27059]User dang ky thue

--- a/app/assets/stylesheets/abstract/_variables.scss
+++ b/app/assets/stylesheets/abstract/_variables.scss
@@ -16,3 +16,7 @@ $white-2: #fff;
 $gray-medium-light-3:#e8e8e8;
 $gray-2: #464646;
 $gray-3: #666;
+$cancel-red: #f53f3f;
+$white-3: #e7e7e7;
+$gray-4: #b3b3b3;
+$white-4: #F5F5F5;
