--- a/app/views/layouts/_user_navbar.html.erb
+++ b/app/views/layouts/_user_navbar.html.erb
@@ -8,7 +8,7 @@
             <% if logged_in? %>
               <%= link_to t(".my_stores"), stores_path(current_user) %>
             <% else %>
-              <%= link_to t(".my_stores"), "#" %>
+              <%= link_to t(".my_stores"), login_path %>
             <% end %>
           </li>
           <li><%= link_to t(".references"), "#" %></li>
@@ -16,17 +16,6 @@
       </span>
     </div>
     <div class="navbar-right row">
-      <div class="saved col-6">
-        <% if logged_in? %>
-          <div class="d-sm-inline-block">
-            <%= link_to t(".logout"), logout_path, class: "nav-link" %>
-          </div>
-        <% else %>
-          <div class="nav-item d-none d-sm-inline-block">
-            <%= link_to t(".login"), login_path, class: "nav-link" %>
-          </div>
-        <% end %>
-      </div>
       <div class="contactUs col-3">
         <div class="dropdown">
           <%= link_to "#", class: "nav-link", data: {toggle: "dropdown"} do%>
@@ -59,6 +48,17 @@
             <a href="#" class="dropdown-item dropdown-footer"><%= t ".see_all_notifications" %></a>
           </div>
         </div>
+      </div>
+      <div class="saved col-6">
+        <% if logged_in? %>
+          <div class="d-sm-inline-block login_btn">
+            <%= link_to t(".logout"), logout_path, class: "nav-link" %>
+          </div>
+        <% else %>
+          <div class="nav-item d-none d-sm-inline-block">
+            <%= link_to t(".login"), login_path, class: "nav-link" %>
+          </div>
+        <% end %>
       </div>
     </div>
   </header>
