--- a/app/views/slots/show.html.erb
+++ b/app/views/slots/show.html.erb
@@ -36,7 +36,7 @@
                     <h4 class="text-primary">
                       <i class="fas fa-layer-group"></i>
                       <% if @store_of_slot %>
-                        <%= t ".store_information"%><%= @store_of_slot.name%>
+                        <%= t ".store_information"%><%= @store_of_slot.name %>
                       <% else %>
                         <%= t ".no_store" %>
                       <% end %>
@@ -47,7 +47,7 @@
                   <div class="col-12 col-sm-6">
                     <div class="info-box bg-light">
                       <div class="info-box-content">
-                        <span class="info-box-text text-center text-muted"><%= t ".location"%></span>
+                        <span class="info-box-text text-center text-muted"><%= t ".location" %></span>
                         <span class="info-box-number text-center text-muted mb-0"><%= @slot.name %></span>
                       </div>
                     </div>
@@ -55,7 +55,7 @@
                   <div class="col-12 col-sm-6">
                     <div class="info-box bg-light">
                       <div class="info-box-content">
-                        <span class="info-box-text text-center text-muted"><%= t ".slot_area"%></span>
+                        <span class="info-box-text text-center text-muted"><%= t ".slot_area" %></span>
                         <span class="info-box-number text-center text-muted mb-0">
                           <%= @slot.area %><i class="icon-square-meters">&#13217;</i>
                         </span>
@@ -65,7 +65,7 @@
                   <div class="col-12 col-sm-6">
                     <div class="info-box bg-light">
                       <div class="info-box-content">
-                        <span class="info-box-text text-center text-muted"><%= t ".category"%></span>
+                        <span class="info-box-text text-center text-muted"><%= t ".category" %></span>
                         <span class="info-box-number text-center text-muted mb-0">
                           <% if @store_of_slot %>
                             <%= @store_of_slot.category_name %>
@@ -79,15 +79,15 @@
                   <div class="col-12 col-sm-6">
                     <div class="info-box bg-light">
                       <div class="info-box-content">
-                        <span class="info-box-text text-center text-muted"><%= t ".price"%></span>
-                        <span class="info-box-number text-center text-muted mb-0"><%= @slot.price %><%= t ".per_month"%></span>
+                        <span class="info-box-text text-center text-muted"><%= t ".price" %></span>
+                        <span class="info-box-number text-center text-muted mb-0"><%= @slot.price %><%= t ".per_month" %></span>
                       </div>
                     </div>
                   </div>
                 </div>
               </div>
               <div class="col-12 col-md-12 col-lg-4 order-1 order-md-2">
-                <h4 class="text-primary"><i class="fas fa-paint-brush"></i><%= t ".customer_information"%></h4>
+                <h4 class="text-primary"><i class="fas fa-paint-brush"></i><%= t ".customer_information" %></h4>
                 <br>
                 <% if @store_of_slot %>
                   <div class="text-muted">
@@ -127,9 +127,12 @@
       <section class="content container">
         <div class="header">
           <div class="header__right">
-            <h5 id="slot_name_title"><%= @slot.name %></h5>
-            <i class="fas fa-star">5.0</i>
-            <a href="#">16 <%= t ".review" %></a>
+            <h1 id="slot_name_title"><%= @slot.name %></h1>
+            <% if @slot.is_empty %>
+              <p class="badge badge-success slot_status"><%= t ".is_empty" %></p>
+            <% else %>
+              <p class="badge badge-info slot_status"><%= t ".not_empty" %></p>
+            <% end %>
           </div>
           <div class="header__left">
             <p> <%= t ".address" %> </p>
@@ -137,7 +140,7 @@
         </div>
         <div class="main">
           <div class="main__left">
-            <img src="https://www.mlive.com/resizer/YEU5ywOU3--21qj7nAlYwDOT_64=/1280x0/smart/arc-anglerfish-arc2-prod-advancelocal.s3.amazonaws.com/public/4G27NNGGWJDYHIBIL2YJQ6DVPA.jpg" alt="image">
+            <%= image_tag Settings.links.store_image %>
             <div class="pricing" id="p-info">
               <div class="p-info">
                 <div class="p-info-item">
@@ -154,7 +157,13 @@
               <div class="p-info">
                 <div class="p-info-item">
                   <li class="p-info-img fas fa-calendar-check"></li>
-                  <div class=""> <%= t ".status" %> </div>
+                  <div class=""> <%= t ".status" %>
+                  <% if @slot.is_empty == true %>
+                     <%= t ".is_empty" %>
+                  <% else %>
+                    <%= t ".not_empty" %>
+                  <% end %>
+                  </div>
                 </div>
               </div>
             </div>
@@ -184,11 +193,56 @@
           </div>
           <div class="main__right" id="slot_main_right">
             <div class="lead">
-              <h5><%= t ".interested_in" %></h5>
+              <h5><%= t "slots.show.interested_in" %></h5>
               <p><%= t ".mission_content" %></p>
-              <button id="button_dangky">
-                <%= t ".hire_now" %>
-              </button>
+              <% if @slot.is_empty  %>
+                <div class="col-md-12">
+                  <%= form_for @store, url: slot_stores_path(@slot.id) do |f| %>
+                    <%= render "shared/error_messages", object: f.object %>
+                    <div class="form-row store_field">
+                      <div class="form-group col-md-12">
+                        <%= f.label :name , t(".name") %>
+                        <%= f.text_field :name, class: "form-control", placeholder: "Name", required: true %>
+                      </div>
+                    </div>
+                    <div class="form-row store_field">
+                      <div class="form-group col-md-12">
+                        <%= f.label :description, t(".description") %>
+                        <%= f.text_area :description, class: "form-control", required: true %>
+                      </div>
+                    </div>
+                    <%= f.fields_for :contract do |builder| %>
+                      <%= render "contract_field", f: builder %>
+                    <% end %>
+                    <div class="category_dropdown">
+                      <%= f.label :category, t(".category"), class: "my-require" %>
+                      <%= f.collection_select :category_id , Category.all, :id, :name, {}, {class: "select optional form-control store_field" } %>
+                    </div>
+                    <button type="button" class="btn btn-primary mt-3 mb-5" id="button_dangky" data-toggle="modal" data-target="#exampleModal">
+                      <%= t ".hire_now" %>
+                    </button>
+                    <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                      <div class="modal-dialog" role="document">
+                        <div class="modal-content">
+                          <div class="modal-header">
+                            <h5 class="modal-title" id="exampleModalLabel"><%= t ".modal_title" %></h5>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                              <span aria-hidden="true">&times;</span>
+                            </button>
+                          </div>
+                          <div class="modal-body">
+                            <%= t ".confirm_content" %>
+                          </div>
+                          <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-dismiss="modal"><%= t ".close" %></button>
+                            <%= f.submit t(".confirm"), class: "btn btn-primary" %>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  <% end %>
+                </div>
+              <% end %>
               <p class="text__footer"><%= t ".rule" %><a href="#"><%= t ".rule_link" %></a></p>
             </div>
             <div class="lead" style="margin-top: 20px;">
