--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -33,23 +33,27 @@
       <div class="main">
         <div class="main__left">
           <div class="products">
-            <% @slots.each do |slot| %>
-              <%= link_to slot do %>
-                <div class="product">
-                  <%= link_to slot do %>
-                    <%= image_tag Settings.links.demo_image%>
-                  <% end %>
-                  <div class="product__title">
-                    <%= link_to slot.name, slot %>
-                    <i class="fas fa-star"> <%= Settings.info.star %> </i>
+              <% @slots.each do |slot| %>
+                <%= link_to slot do %>
+                  <div class="product">
+                    <%= link_to slot do %>
+                      <%= image_tag Settings.links.store_image %>
+                    <% end %>
+                    <div class="product__title">
+                      <%= link_to slot.name, slot %>
+                      <% if slot.is_empty %>
+                        <span class="badge badge-success slot_status"><%= t ".empty" %></span>
+                      <% else %>
+                        <span class="badge badge-info slot_status"><%= t ".rented" %></span>
+                      <% end %>
+                    </div>
+                    <p class="product__text"><%= slot.terminal.name %> </p>
                   </div>
-                  <p class="product__text"><%= slot.terminal.name %> </p>
-                </div>
+                <% end %>
               <% end %>
-            <% end %>
-            <div class="mt-4">
-              <%= paginate @slots, theme: "twitter-bootstrap-4", pagination_class: "pagination-sm",nav_class: "d-inline-b" %>
-            </div>
+              <div class="mt-4">
+                <%= paginate @slots, theme: "twitter-bootstrap-4", pagination_class: "pagination-sm",nav_class: "d-inline-b" %>
+              </div>
             <div class="footer">
               <h2><%= t ".question" %> </h2>
               <p class="text__header"><%= t ".answer" %> </p>
@@ -63,7 +67,7 @@
           </div>
         </div>
         <div class="main__right home_main_right">
-          <iframe src= <%= Settings.links.googlemap%> width="100%" height="800" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+          <iframe src= <%= Settings.links.googlemap %> width="100%" height="800" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
         </div>
       </div>
     </section>
