--- a/app/views/stores/show.html.erb
+++ b/app/views/stores/show.html.erb
@@ -11,7 +11,6 @@
       <div class="header">
         <div class="header__right">
           <h1 id="slot_name_title"><%= @store.name %></h1>
-          <i class="fas fa-star"><%= Settings.info.star %></i>
         </div>
         <div class="header__left">
           <p> <%= t ".address" %> </p>
@@ -19,7 +18,7 @@
       </div>
       <div class="main">
         <div class="main__left">
-          <img src="https://www.mlive.com/resizer/YEU5ywOU3--21qj7nAlYwDOT_64=/1280x0/smart/arc-anglerfish-arc2-prod-advancelocal.s3.amazonaws.com/public/4G27NNGGWJDYHIBIL2YJQ6DVPA.jpg" alt="image">
+          <%= image_tag Settings.links.store_image %>
           <div class="pricing">
             <h2><%= t ".description" %></h2>
             <p><%= @store.description %></p>
@@ -49,14 +48,35 @@
             <h5><%= t ".mystore_information" %></h5>
             <p class="store-info-p"> <%= t ".area" %>: <%= @store.slot.area %><span>m<sup>2</sup></span> </p>
             <p class="store-info-p"> <%= t ".price" %>: <%= @store.slot.price %></p>
-            <% if @store.is_active %>
-              <p class="store-info-p"> <%= t ".status" %>: <%= t ".hiring" %></p>
-            <% else %>
+            <% if @store.status == Store.statuses.key(1) %>
               <p class="store-info-p"> <%= t ".status" %>: <%= t ".waiting" %></p>
               <p class="store-info-p"><%= t ".cancel_check" %></p>
-              <button id="button_dangky">
+              <button type="button" id="button_dangky" data-toggle="modal" data-target="#exampleModal">
                 <%= t ".cancel" %>
               </button>
+              <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                <div class="modal-dialog" role="document">
+                  <div class="modal-content">
+                    <div class="modal-header">
+                      <h5 class="modal-title" id="exampleModalLabel"><%= t ".modal_title" %></h5>
+                      <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                      </button>
+                    </div>
+                    <div class="modal-body">
+                      <%= t ".confirm_content" %>
+                    </div>
+                    <div class="modal-footer">
+                      <button type="button" class="btn btn-secondary" data-dismiss="modal"><%= t ".close" %></button>
+                      <%= link_to t(".confirm"), destroy_store_path(@store.id), class: "btn btn-primary"%>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            <% elsif @store.status == Store.statuses.key(2) %>
+              <p class="store-info-p"> <%= t ".status" %>: <%= t ".hiring" %></p>
+            <% elsif @store.status == Store.statuses.key(3)%>
+              <p class="store-info-p"> <%= t ".status" %>: <%= t ".rejected" %></p>
             <% end %>
           </div>
           <div class="lead" style="margin-top: 20px;">
