--- a/app/views/contracts/_approve_deny_button.html.erb
+++ b/app/views/contracts/_approve_deny_button.html.erb
@@ -1,33 +1,35 @@
 <% options = modify_contract_action contract.status_id %>
-<% options.each do |val| %>
-  <% button_name = convert_id_to_name val %>
-  <% button_color = modify_label_color val %>
-  <% if val == Settings.status.deny %>
-    <button type="button" class="btn btn-lg btn-danger" data-toggle="modal" data-target="#denyModal" data-whatever="@getbootstrap"><%= t ".#{button_name}" %></button>
-    <div class="modal fade" id="denyModal" tabindex="-1" aria-labelledby="denyModalLabel" aria-hidden="true">
-      <div class="modal-dialog">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title" id="denyModalLabel"><%= t ".deny_reason" %></h5>
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-              <span aria-hidden="true">&times;</span>
-            </button>
-          </div>
-          <div class="modal-body">
-            <%= form_with url: contract_path(status_id: val), method: :put, remote: true do |f| %>
-              <div class="form-group">
-                <%= f.text_area :message, class: "form-control", id: "message-text" %>
-              </div>
-              <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal"><%= t ".close" %></button>
-                <%= f.submit t(".send"), class: "btn btn-danger", id: "submit-deny" %>
-              </div>
-            <% end %>
+<% if options %>
+  <% options.each do |val| %>
+    <% button_name = convert_id_to_name val %>
+    <% button_color = modify_label_color val %>
+    <% if val == Settings.status.deny %>
+      <button type="button" class="btn btn-lg btn-danger" data-toggle="modal" data-target="#denyModal" data-whatever="@getbootstrap"><%= t ".#{button_name}" %></button>
+      <div class="modal fade" id="denyModal" tabindex="-1" aria-labelledby="denyModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="denyModalLabel"><%= t ".deny_reason" %></h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+              <%= form_with url: contract_path(status_id: val), method: :put, remote: true do |f| %>
+                <div class="form-group">
+                  <%= f.text_area :message, class: "form-control", id: "message-text" %>
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-secondary" data-dismiss="modal"><%= t ".close" %></button>
+                  <%= f.submit t(".send"), class: "btn btn-danger", id: "submit-deny" %>
+                </div>
+              <% end %>
+            </div>
           </div>
         </div>
       </div>
-    </div>
-  <% else %>
-    <%= link_to t(".#{button_name}"), contract_path(status_id: val),  method: :put, id: "approve_btn", class: "btn btn-lg btn-#{button_color}", remote: true %>
+    <% else %>
+      <%= link_to t(".#{button_name}"), contract_path(status_id: val),  method: :put, id: "approve_btn", class: "btn btn-lg btn-#{button_color}", remote: true %>
+    <% end %>
   <% end %>
 <% end %>
