--- a/app/views/slots/show.html.erb
+++ b/app/views/slots/show.html.erb
@@ -1,5 +1,5 @@
 <% provide :title, t(".title") %>
-  <% if employee_logged_in? %>
+  <% if employee_signed_in? %>
     <section class="content-header" id="employee">
       <div class="container-fluid">
         <div class="row mb-2">
