--- a/app/views/employees/show.html.erb
+++ b/app/views/employees/show.html.erb
@@ -15,7 +15,7 @@
     </div>
   </section>
   <section class="content">
-    <%= @current_employee.name %>,
-    <%= @current_employee.email %>
+    <%= current_employee.name %>,
+    <%= current_employee.email %>
   </section>
 </div>
