--- a/app/assets/stylesheets/libs/main.scss
+++ b/app/assets/stylesheets/libs/main.scss
@@ -176,3 +176,12 @@ nav.main-header {
 #contract-detail {
  font-size: 2.5rem;
 }
+
+.unread_noti {
+  background-color: $blue-1 !important;
+}
+
+#remove_list{
+  max-height: 200px;
+  overflow: auto;
+}
