--- a/app/views/slots/_contract_field.html.erb
+++ b/app/views/slots/_contract_field.html.erb
@@ -2,13 +2,13 @@
   <div class="form-group col-md-12">
     <%= f.label t(".start_date") %>
     <div>
-      <%= f.date_select :start_date, "data-provide" => "datepicker", html: {class: "select optional form-control" } %>
+      <%= f.date_field :start_date, class: "select optional form-control", data: {provide: "datepicker"} %>
     </div>
   </div>
   <div class="form-group col-md-12">
       <%= f.label t(".end_date") %>
       <div>
-        <%= f.date_select :end_date, "data-provide" => "datepicker" %>
+        <%= f.date_field :end_date,  class: "select optional form-control", data: {provide: "datepicker"} %>
       </div>
   </div>
 </div>
